# a-brick-code-analyzer

./: README.md  pyproject.toml
examples/: js_ts_example.py  llm_example.py  parser_example.py  rules_example.py
src/: __init__.py
src/a_brick_code_analyzer/: __init__.py  base.py  factory.py  javascript_parser.py  python_parser.py
src/a_brick_code_analyzer/llm/: __init__.py  analyzer.py  base.py  ollama_client.py  prompts.py
src/a_brick_code_analyzer/rules/: __init__.py  base.py  config.py  engine.py  result.py
src/a_brick_code_analyzer/rules/builtin/: __init__.py  complexity.py  naming.py  structure.py
tests/: test_builtin_rules.py  test_factory.py  test_javascript_parser.py  test_python_parser.py  test_rules.py
